--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-speech-recognition": "^3.10.0",
+    "regenerator-runtime": "^0.14.1",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3"
+  },
+  "devDependencies": {
+    "@types/react-speech-recognition": "^3.9.5"
   }
 }
